Fix flip button visibility issue in nutrition recipe card view component

--- a/src/app/components/nutrition-recipe-card-wiew/nutrition-recipe-card/nutrition-recipe-card.component.scss
+++ b/src/app/components/nutrition-recipe-card-wiew/nutrition-recipe-card/nutrition-recipe-card.component.scss
@@ -8,7 +8,6 @@
     max-width: 552px;
     max-height: 200px;
 
-
     &__front {
         color: white;
         display: flex;
@@ -60,11 +59,10 @@
         }
 
         &__footer {
-            align-items: end;
+            align-items: flex-end;
             display: flex;
-            flex: 1 1 auto;
             flex-direction: row;
-            height: 140;
+            flex: 1 1 auto;
             justify-content: space-between;
             position: relative;
             width: 100%;
@@ -77,17 +75,24 @@
                 flex-direction: column;
                 height: 68px;
                 justify-content: flex-end;
-                max-width: 408px;
-                min-width: 216px;
+                max-width: 300px;
+                min-width: 200px;
+                width: 100%;
 
+
+    
 
                 &__title {
                     font-size: 20px;
                     font-weight: 600;
                     line-height: 26px;
                     margin: 0;
-                    padding-left: 10px;
+                    margin-left: 10px;
                     text-align: left;
+                    overflow: hidden;
+                    padding: 0;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
                     width: 100%;
 
                 }
